--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,11 @@ body {
     background-color: rgb(0, 0, 0);
     color: rgb(198, 198, 198);
     font-family: "Space Mono";
-    padding-left: 150px;
-    padding-right: 150px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    font-size: 12;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 
 
 }
@@ -14,13 +15,13 @@ nav {
     background-color: rgb(0, 0, 0);
     color: rgb(198, 198, 198);
     font-family: "Space Mono";
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 20px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    margin-top: 5%;
 }
 
 section {
-    margin-bottom: 50px;
+    margin-bottom: 2.5%;
 }
 
 strong {
@@ -38,7 +39,8 @@ h3 {
 }
 
 hr {
-    margin-bottom: 20px;
+    margin-bottom: 5%;
+    margin-top: 5%;
 }
 
 .horizontal {
@@ -46,13 +48,13 @@ hr {
 }
 
 .main {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .intro {
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .who-am-i {
