--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,28 @@ body {
     padding-top: 5%;
     padding-bottom: 5%;
 }
+.Navbar {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    flex-wrap: wrap; 
+}
+
+.Navbar > div {
+    flex: 1; 
+    min-width: 300px;
+}
+
+.box {
+    width: 400px;
+    height: 350px;
+    font-family: "Space Mono";
+    font-size: 12px;
+    color: rgb(112, 112, 112);
+    overflow: hidden;
+    white-space: pre-line;
+    text-align: center;
+}
 
 /* Adjust padding and margins for smaller screens */
 @media (max-width: 768px) {
@@ -38,8 +60,17 @@ body {
         margin-bottom: 2%;
     }
 }
+@media (max-width: 600px) {
+    .Navbar {
+        flex-direction: column;
+        align-items: center; 
+    }
 
-/* Adjust padding for very small screens like phones */
+    .box {
+        margin-top: 20px; 
+    }
+}
+
 @media (max-width: 480px) {
     body {
         padding-left: 3%;
@@ -145,27 +176,3 @@ a:active {
     text-decoration: underline;
 }
 
-/* Fonts */
-.space-mono-regular {
-    font-family: "Space Mono", serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
-.space-mono-bold {
-    font-family: "Space Mono", serif;
-    font-weight: 700;
-    font-style: normal;
-}
-
-.space-mono-regular-italic {
-    font-family: "Space Mono", serif;
-    font-weight: 400;
-    font-style: italic;
-}
-
-.space-mono-bold-italic {
-    font-family: "Space Mono", serif;
-    font-weight: 700;
-    font-style: italic;
-}
